# py-inference-scheduler

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: main.yml
backends/verl/: __init__.py  sglang.py  vllm.py
configs/: scheduler_config.yaml
datalayer/metrics/verl/: fetch_metrics.py  sglang.py  vllm.py
datalayer/rayserve/: __init__.py  engine.py
datalayer/verl/: datastore.py  metrics.py
docs/: kv_saturation.md  scheduler_customization.md
integration/rayserve/: router.py
integration/verl/: README.md  verl_hook.py
integration/verl/examples/: run_qwen2_5-32b_math.sh  run_qwen2_5-32b_math_sglang.sh  runtime-env.yaml  verl-inference-scheduler.yaml
scheduling/: __init__.py
scheduling/core/: __init__.py  config.py  scheduler.py
scheduling/framework/: __init__.py  helpers.py  interface.py  registry.py  types.py
scheduling/plugins/: __init__.py
scheduling/plugins/flow_control/: __init__.py  kv_saturation.py
scheduling/plugins/handlers/: generic.py
scheduling/plugins/pickers/: __init__.py  generic.py
scheduling/plugins/scorers/: __init__.py  backpressure.py  generic.py  prefix_plugin.py  sticky_session.py
tests/unit/core/: test_scheduler.py
tests/unit/framework/: test_registry.py
tests/unit/plugins/flow_control/: test_kv_saturation.py
tests/unit/plugins/scorers/: test_kv_cache.py  test_least_queue.py  test_prefix_plugin.py  test_queue_scorer.py  test_round_robin.py  test_running_requests.py  test_sticky_session.py  test_waiting_requests.py
