[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-inference-scheduler"
version = "0.1.0"
description = "A Python implementation of an inference request scheduler, inspired by the k8s Inference Gateway project"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Kellen", email = "kellen.f.swain@gmail.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Monitoring",
]
keywords = ["inference", "scheduling", "ray", "llm", "router"]

dependencies = [
    "ray[serve]>=2.0.0",
    "ray[tune]>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.20.0",
    "ruff>=0.15.10",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[tool.setuptools]
packages = ["scheduling"]

[tool.setuptools.package-data]
scheduling = ["py.typed"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

# Skip following imports for third-party packages whose source uses Python 3.10+ syntax. 
[[tool.mypy.overrides]]
module = ["pytest.*", "ray.*"]
follow_imports = "skip"

[tool.ruff]
target-version = "py38"
line-length = 100
preview = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["ALL"]
preview = true
ignore = [
    "ANN001", # Missing function argument type
    "ANN002", # Missing *args type
    "ANN003", # Missing **kwargs type
    "ANN202", # Missing private return type
    "ARG001", # Unused function argument
    "ARG002", # Unused method argument
    "ARG005", # Unused lambda argument
    "COM812", # Missing trailing comma
    "COM819", # Prohibited trailing comma
    "CPY001", # Missing copyright notice
    "D100", # Missing module docstring
    "D101", # Missing class docstring
    "D102", # Missing method docstring
    "D103", # Missing function docstring
    "D104", # Missing package docstring
    "D107", # Missing __init__ docstring
    "D203", # Blank line before class docstring
    "D206", # Tabs in docstring indentation
    "D212", # Multiline summary first line
    "D300", # Triple single-quoted docstring
    "DOC201", # Return missing from docstring
    "DOC501", # Raised exception missing from docstring
    "E111", # Bad indentation multiple
    "E114", # Bad comment indentation multiple
    "E117", # Over-indented comment
    "EM101", # Raw string in exception
    "EM102", # F-string in exception
    "FIX002", # TODO comment found
    "ISC001", # Single-line implicit string concat
    "ISC002", # Multi-line implicit string concat
    "PLC0415", # Import outside top-level
    "PLR6301", # Method could be function
    "Q000", # Inline string quote style
    "Q001", # Multiline string quote style
    "Q002", # Docstring quote style
    "Q003", # Avoidable escaped quote
    "SLF001", # Private member access
    "T201", # Print statement found
    "TC001", # First-party type-only import
    "TC002", # Third-party type-only import
    "TC003", # Standard-library type-only import
    "TC006", # Quote typing.cast type
    "TC008", # Quoted type alias
    "TD002", # TODO missing author
    "TRY003", # Long message in raise
    "W191", # Tab indentation
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN", # All annotation checks
    "ARG", # All unused-argument checks
    "D", # All pydocstyle docstring checks
    "EM101", # Raw string in exception
    "EM102", # F-string in exception
    "ERA001", # Commented-out code
    "INP001", # Implicit namespace package
    "PLC0415", # Import outside top-level
    "PLC1901", # Compare to empty string
    "PLC2701", # Private import from external module
    "PLR0904", # Too many public methods
    "PLR0913", # Too many arguments
    "PLR0917", # Too many positional arguments
    "PLR2004", # Magic value comparison
    "PLR6301", # Method could be function
    "RUF029", # Async function without await
    "RUF069", # Float equality comparison
    "S101", # Assert statement used
    "S104", # Bind to all interfaces
    "S108", # Hardcoded temp file
    "S404", # Suspicious subprocess import
    "S603", # Subprocess without shell check
    "S607", # Partial executable path
    "SLF001", # Private member access
    "TC003", # Standard-library type-only import
    "TC006", # Quote typing.cast type
    "TC008", # Quoted type alias
    "TRY003", # Long message in raise
    "TRY004", # Prefer TypeError for bad type
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-args = 5
